--- a/services/templates/services/choose_date.html
+++ b/services/templates/services/choose_date.html
@@ -1,14 +1,16 @@
 {% extends 'base.html' %}
 
 {% load static %}
+{% load index %}
 
 {% block title %}Wybierz date - {{ block.super }}{% endblock %}
 
 {% block header %}
 
     <div class="page-header page-header-perspective">
-        <div class="page-header-left"><a class="brand" href="index.html"><img src="{% static 'images/logo-default-199x36.png' %}"
-                                                                              alt="" width="199" height="36"/></a></div>
+        <div class="page-header-left"><a class="brand" href="{% url 'home' %}"><img
+                src="{% static 'images/logo-default-199x36.png' %}"
+                alt="" width="199" height="36"/></a></div>
         <div class="page-header-center">
             <div class="step-progress">
                 <div class="step-progress-top"><span class="step-progress-number">3</span><span>z</span><span
@@ -39,128 +41,62 @@
         <div class="shell">
             <h2>Wybierz datę</h2>
             <div class="p text-width-medium">
-                <p class="big">Aby zakończyć rezerwację, wybierz datę i godzinę, które najbardziej Ci odpowiadają. Z przyjemnością zaproponujemy najwyższej klasy usługi fryzjerskie w wybranym dniu.</p>
+                <p class="big">Aby zakończyć rezerwację, wybierz datę i godzinę, które najbardziej Ci odpowiadają. Z
+                    przyjemnością zaproponujemy najwyższej klasy usługi fryzjerskie w wybranym dniu.</p>
             </div>
-            <h3>Wrzesień</h3>
+            <h3>{{ calendar|first|index:"month" }}</h3>
             <div class="rd-material-tabs date-picker" data-items="2" data-xs-items="3" data-sm-items="4"
                  data-md-items="5" data-margin="15" data-stage-padding="0" data-sm-stage-padding="30">
                 <div class="rd-material-tabs__list">
                     <ul>
-                        <li><a class="date-picker-date disabled" href="#">
-                            <div class="date-picker-date-number">9</div>
-                            <div class="date-picker-date-text">Piątek</div>
-                        </a></li>
-                        <li><a class="date-picker-date disabled" href="#">
-                            <div class="date-picker-date-number">10</div>
-                            <div class="date-picker-date-text">Sobota</div>
-                        </a></li>
-                        <li><a class="date-picker-date" href="#">
-                            <div class="date-picker-date-number">11</div>
-                            <div class="date-picker-date-text">Niedziela</div>
-                        </a></li>
-                        <li><a class="date-picker-date" href="#">
-                            <div class="date-picker-date-number">12</div>
-                            <div class="date-picker-date-text">Poniedziałek</div>
-                        </a></li>
-                        <li><a class="date-picker-date" href="#">
-                            <div class="date-picker-date-number">13</div>
-                            <div class="date-picker-date-text">Wtorek</div>
-                        </a></li>
-                        <li><a class="date-picker-date" href="#">
-                            <div class="date-picker-date-number">14</div>
-                            <div class="date-picker-date-text"> Środa</div>
-                        </a></li>
-                        <li><a class="date-picker-date" href="#">
-                            <div class="date-picker-date-number">15</div>
-                            <div class="date-picker-date-text"> Czwartek</div>
-                        </a></li>
+                        {% for day in calendar %}
+
+                            <li>
+                                <a class="date-picker-date {% for d in working_days %} {% if d.week_day_nr == day.week_day_nr %} {{ d.define_working_day }} {% endif %} {% endfor %}"
+                                   href="#">
+                                    <div class="date-picker-date-number">{{ day.month_day_nr }}</div>
+                                    <div class="date-picker-date-text">{{ day.title }}</div>
+                                </a>
+                            </li>
+
+                        {% endfor %}
                     </ul>
                 </div>
                 <div class="rd-material-tabs__container">
-                    <div>
-                        <ul class="date-picker-list animated fadeIn">
-                            <li class="disabled"><a href="{% url 'booking_finish' %}">10:00 - 11:00</a></li>
-                            <li class="disabled"><a href="{% url 'booking_finish' %}">11:00 - 12:00</a></li>
-                            <li class="disabled"><a href="{% url 'booking_finish' %}">12:00 - 13:00</a></li>
-                            <li class="disabled"><a href="{% url 'booking_finish' %}">13:00 - 14:00</a></li>
-                            <li class="disabled"><a href="{% url 'booking_finish' %}">14:00 - 15:00</a></li>
-                            <li class="disabled"><a href="{% url 'booking_finish' %}">15:00 - 16:00</a></li>
-                            <li class="disabled"><a href="{% url 'booking_finish' %}">16:00 - 17:00</a></li>
-                            <li class="disabled"><a href="{% url 'booking_finish' %}">17:00 - 18:00</a></li>
-                        </ul>
-                    </div>
-                    <div>
-                        <ul class="date-picker-list animated fadeIn">
-                            <li class="disabled"><a href="{% url 'booking_finish' %}">10:00 - 11:00</a></li>
-                            <li class="disabled"><a href="{% url 'booking_finish' %}">11:00 - 12:00</a></li>
-                            <li class="disabled"><a href="{% url 'booking_finish' %}">12:00 - 13:00</a></li>
-                            <li class="disabled"><a href="{% url 'booking_finish' %}">13:00 - 14:00</a></li>
-                            <li class="disabled"><a href="{% url 'booking_finish' %}">14:00 - 15:00</a></li>
-                            <li class="disabled"><a href="{% url 'booking_finish' %}">15:00 - 16:00</a></li>
-                            <li class="disabled"><a href="{% url 'booking_finish' %}">16:00 - 17:00</a></li>
-                            <li class="disabled"><a href="{% url 'booking_finish' %}">17:00 - 18:00</a></li>
-                        </ul>
-                    </div>
-                    <div>
-                        <ul class="date-picker-list animated fadeIn">
-                            <li><a href="{% url 'booking_finish' %}">10:00 - 11:00</a></li>
-                            <li class="disabled"><a href="{% url 'booking_finish' %}">11:00 - 12:00</a></li>
-                            <li><a href="{% url 'booking_finish' %}">12:00 - 13:00</a></li>
-                            <li class="disabled"><a href="{% url 'booking_finish' %}">13:00 - 14:00</a></li>
-                            <li class="disabled"><a href="{% url 'booking_finish' %}">14:00 - 15:00</a></li>
-                            <li><a href="{% url 'booking_finish' %}">15:00 - 16:00</a></li>
-                            <li><a href="{% url 'booking_finish' %}">16:00 - 17:00</a></li>
-                            <li class="disabled"><a href="{% url 'booking_finish' %}">17:00 - 18:00</a></li>
-                        </ul>
-                    </div>
-                    <div>
-                        <ul class="date-picker-list animated fadeIn">
-                            <li><a href="{% url 'booking_finish' %}">10:00 - 11:00</a></li>
-                            <li class="disabled"><a href="{% url 'booking_finish' %}">11:00 - 12:00</a></li>
-                            <li><a href="{% url 'booking_finish' %}">12:00 - 13:00</a></li>
-                            <li class="disabled"><a href="{% url 'booking_finish' %}">13:00 - 14:00</a></li>
-                            <li class="disabled"><a href="{% url 'booking_finish' %}">14:00 - 15:00</a></li>
-                            <li><a href="{% url 'booking_finish' %}">15:00 - 16:00</a></li>
-                            <li><a href="{% url 'booking_finish' %}">16:00 - 17:00</a></li>
-                            <li class="disabled"><a href="{% url 'booking_finish' %}">17:00 - 18:00</a></li>
-                        </ul>
-                    </div>
-                    <div>
-                        <ul class="date-picker-list animated fadeIn">
-                            <li><a href="{% url 'booking_finish' %}">10:00 - 11:00</a></li>
-                            <li class="disabled"><a href="{% url 'booking_finish' %}">11:00 - 12:00</a></li>
-                            <li><a href="{% url 'booking_finish' %}">12:00 - 13:00</a></li>
-                            <li class="disabled"><a href="{% url 'booking_finish' %}">13:00 - 14:00</a></li>
-                            <li class="disabled"><a href="{% url 'booking_finish' %}">14:00 - 15:00</a></li>
-                            <li><a href="{% url 'booking_finish' %}">15:00 - 16:00</a></li>
-                            <li><a href="{% url 'booking_finish' %}">16:00 - 17:00</a></li>
-                            <li class="disabled"><a href="{% url 'booking_finish' %}">17:00 - 18:00</a></li>
-                        </ul>
-                    </div>
-                    <div>
-                        <ul class="date-picker-list animated fadeIn">
-                            <li><a href="{% url 'booking_finish' %}">10:00 - 11:00</a></li>
-                            <li class="disabled"><a href="{% url 'booking_finish' %}">11:00 - 12:00</a></li>
-                            <li><a href="{% url 'booking_finish' %}">12:00 - 13:00</a></li>
-                            <li class="disabled"><a href="{% url 'booking_finish' %}">13:00 - 14:00</a></li>
-                            <li class="disabled"><a href="{% url 'booking_finish' %}">14:00 - 15:00</a></li>
-                            <li><a href="{% url 'booking_finish' %}">15:00 - 16:00</a></li>
-                            <li><a href="{% url 'booking_finish' %}">16:00 - 17:00</a></li>
-                            <li class="disabled"><a href="{% url 'booking_finish' %}">17:00 - 18:00</a></li>
-                        </ul>
-                    </div>
-                    <div>
-                        <ul class="date-picker-list animated fadeIn">
-                            <li><a href="{% url 'booking_finish' %}">10:00 - 11:00</a></li>
-                            <li class="disabled"><a href="{% url 'booking_finish' %}">11:00 - 12:00</a></li>
-                            <li><a href="{% url 'booking_finish' %}">12:00 - 13:00</a></li>
-                            <li class="disabled"><a href="{% url 'booking_finish' %}">13:00 - 14:00</a></li>
-                            <li class="disabled"><a href="{% url 'booking_finish' %}">14:00 - 15:00</a></li>
-                            <li><a href="{% url 'booking_finish' %}">15:00 - 16:00</a></li>
-                            <li><a href="{% url 'booking_finish' %}">16:00 - 17:00</a></li>
-                            <li class="disabled"><a href="{% url 'booking_finish' %}">17:00 - 18:00</a></li>
-                        </ul>
-                    </div>
+
+                    {% for day in calendar %}
+
+                        <div>
+                            <ul class="date-picker-list animated fadeIn">
+
+                                {% for d in working_days %}
+
+                                    {% if d.week_day_nr == day.week_day_nr %}
+
+                                        {% for time in d.time_set.all %}
+
+                                            <form action="{% url 'booking_finish' %}" method="post">
+
+                                                {% csrf_token %}
+
+                                                <li class="{% if time.status == 0 %} disabled {% endif %} {{ d.define_working_day }}">
+                                                    <input type="hidden" name="time_id" value="{{ time.id }}">
+                                                    <input type="submit" value="{{ time.hour|time:"H:i" }} - {{ time.hour|increase:1|time:"H:i" }}">
+                                                </li>
+
+                                            </form>
+
+                                        {% endfor %}
+
+                                    {% endif %}
+
+                                {% endfor %}
+
+                            </ul>
+                        </div>
+
+                    {% endfor %}
+
                 </div>
             </div>
         </div>
