--- a/templates/forms/includes/button.html
+++ b/templates/forms/includes/button.html
@@ -1,7 +1,7 @@
-<div class="form-row">
-     <div class="form-group col-md-6">
+    <div class="form-group col-md-6">
         <label for="input_{{ field.name }}">{{ field.label }}</label>
 
         {{ field }}
 
     </div>
+</div>
