--- a/templates/backend/service/service_list.html
+++ b/templates/backend/service/service_list.html
@@ -13,7 +13,7 @@
             </a>
         </div>
         <div class="box">
-            <table data-plugin="bootstrapTable" id="table" data-toolbar="#toolbar" data-search="true" data-show-columns="true" data-show-export="true" data-show-print="true" data-detail-view="false" data-mobile-responsive="true" data-pagination="true" data-page-list="[10, 25, 50, 100, ALL]" data-url="{% url 'services' %}" class="table"></table>
+            <table data-plugin="bootstrapTable" id="table" data-toolbar="#toolbar" data-search="true" data-show-columns="true" data-detail-view="false" data-mobile-responsive="true" data-pagination="true" data-page-list="[10, 25, 50, 100, ALL]" data-url="{% url 'services' %}" class="table"></table>
         </div>
     </div>
 
