--- a/templates/backend/includes/layouts/side_menu_section_1.html
+++ b/templates/backend/includes/layouts/side_menu_section_1.html
@@ -189,58 +189,18 @@
                         </a>
                         <ul class="nav-sub nav-mega">
                             <li>
-                                <a href="#sub_1_" data-pjax-state="">
-                                    <span class="nav-caret"><i class="fa fa-caret-down"></i></span>
-                                    <span class="nav-text">Pages</span>
+                                <a href="{% url 'barber-settings' %}" data-pjax-state="">
+                                    <span class="nav-icon">
+                                        <i class="badge badge-xs badge-o md b-primary"></i>
+                                    </span>
+                                    <span class="nav-text">Barber</span>
                                 </a>
-                                <ul class="nav-sub nav-mega">
-                                    <li>
-                                        <a href="#sub_2" data-pjax-state="">
-                                            <span class="nav-text">Home</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#sub_2" data-pjax-state="">
-                                            <span class="nav-text">About</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#sub_2_" data-pjax-state="">
-                                            <span class="nav-caret"><i class="fa fa-caret-down"></i></span>
-                                            <span class="nav-text">Service</span>
-                                        </a>
-                                        <ul class="nav-sub nav-mega">
-                                            <li>
-                                                <a href="#sub_3_1" data-pjax-state="">
-                                                    <span class="nav-text">Barbers</span>
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a href="#sub_3_2" data-pjax-state="">
-                                                    <span class="nav-text">Calendar</span>
-                                                </a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li>
-                                        <a href="#sub_2" data-pjax-state="">
-                                            <span class="nav-text">Blog</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#sub_2" data-pjax-state="">
-                                            <span class="nav-text">Shop</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#sub_2" data-pjax-state="">
-                                            <span class="nav-text">Contact</span>
-                                        </a>
-                                    </li>
-                                </ul>
                             </li>
                             <li>
-                                <a href="#sub_1" data-pjax-state="">
+                                <a href="{% url 'calendar-settings' %}" data-pjax-state="">
+                                    <span class="nav-icon">
+                                        <i class="badge badge-xs badge-o md b-primary"></i>
+                                    </span>
                                     <span class="nav-text">Calendar</span>
                                 </a>
                             </li>
