--- a/templates/frontend/base.html
+++ b/templates/frontend/base.html
@@ -4,9 +4,13 @@
 <head>
     <title>{% block title %}Barbershop{% endblock %}</title>
     <meta name="format-detection" content="telephone=no">
-    <meta name="viewport"
-          content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
+
     <meta charset="utf-8">
 
     <link rel="icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon">
@@ -88,7 +92,6 @@
                                     <li class="active"><a href="{% url 'home' %}">Home</a></li>
                                     <li><a href="{% url 'about' %}">About</a></li>
                                     <li><a href="{% url 'service' %}">Service</a></li>
-                                    <li><a href="{% url 'blog' %}">Blog</a></li>
                                     <li><a href="{% url 'shop' %}">Shop</a></li>
                                     <li><a href="{% url 'contact' %}">Contact</a></li>
                                 </ul>
@@ -134,7 +137,6 @@
                                 <li class="active"><a href="{% url 'home' %}">Home</a></li>
                                 <li><a href="{% url 'about' %}">About</a></li>
                                 <li><a href="{% url 'service' %}">Service</a></li>
-                                <li><a href="{% url 'blog' %}">Blog</a></li>
                                 <li><a href="{% url 'shop' %}">Shop</a></li>
                                 <li><a href="{% url 'contact' %}">Contact</a></li>
                             </ul>
