--- a/templates/backend/setting/index.html
+++ b/templates/backend/setting/index.html
@@ -43,7 +43,7 @@
         </div>
     </div>
     <div class="form-row">
-        <div class="d-flex mb-3">
+        <div class="d-flex mb-3 col-sm-12 col-md-12">
             <button type="button" class="btn btn-sm white" id="todayview">today</button>
             <div class="btn-group ml-auto">
                 <button class="btn btn-sm white" id="dayview">Day</button>
@@ -51,7 +51,7 @@
                 <button class="btn btn-sm white" id="monthview">Month</button>
             </div>
         </div>
-        <div id="fullcalendar" data-plugin="fullCalendar"></div>
+        <div id="calendar" data-plugin="fullCalendar"></div>
     </div>
 
 {% endblock %}
