--- a/templates/forms/includes/event_info.html
+++ b/templates/forms/includes/event_info.html
@@ -13,7 +13,7 @@
                 <div class="event-desc col-md-8"></div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="md-btn md-raised mb-2 w-xs blue" data-dismiss="modal">Edytować</button>
+                <button type="button" id="event-edit" class="md-btn md-raised mb-2 w-xs blue">Edytować</button>
                 <button type="button" id="event-delete" class="md-btn md-raised mb-2 w-xs red " >Kasować</button>
             </div>
         </div>
