--- a/templates/forms/includes/new_event.html
+++ b/templates/forms/includes/new_event.html
@@ -8,7 +8,7 @@
                 </button>
             </div>
 
-            <form style="width:100%;" novalidate>
+            <form id="save-event" style="width:100%;" novalidate>
                 <div class="modal-body p-lg form-row">
 
                     {% csrf_token %}
